samples/_failures_safe/1761262926_84b4ca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be0a3986.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_be0a3986.c:178:16: error: expected expression at end of input
  178 |                token->line, token->column,
      |                ^~~~~
./samples/SAFE/__tmp_be0a3986.c:178:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_be0a3986.c:178:16: error: expected declaration or statement at end of input
